Update template wording

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -17,7 +17,7 @@
           <p class="theme-login-p">
             The button above will log in using Microsoft Single Sign-On.
             If you need an alternate method you can try 
-            <a href="{{ $c.URL }}" target="_self">Logging in with {{ $c.Name }}</a>.
+            <a href="{{ $c.URL }}" target="_self">Logging in with the failsafe</a>.
           </p>
         </div>
       {{ end }}
